--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,31 +1,28 @@
-name: CI/CD Pipeline
+name: Example Workflow
 
 on:
-  push:
+  push:  # Trigger on push
     branches:
       - main
-  pull_request:
+      - develop
+  pull_request:  # Trigger on pull request
     branches:
       - main
+  workflow_dispatch:  # Manual trigger
+    inputs:
+      environment:
+        description: "Choose environment"
+        required: true
+        default: "staging"
+  schedule:  # Scheduled trigger
+    - cron: "0 5 * * *"  # Every day at 5:00 AM
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run tests
-        run: |
-          pytest
+      - name: Run a shell command
+        run: echo "Workflow triggered!"
